--- a/app/src/main/res/layout/item_user_head.xml
+++ b/app/src/main/res/layout/item_user_head.xml
@@ -25,6 +25,8 @@
 
 
         <TextView
+
+            android:visibility="visible"
             android:id="@+id/tv_login"
 
             android:layout_width="wrap_content"
@@ -39,15 +41,20 @@
 
             android:text="登录/注册"
             android:textColor="@android:color/white"
-            android:textSize="14sp"/>
+            android:textSize="14sp"
+            android:drawableRight="@mipmap/aqx"/>
 
         <TextView
+            android:visibility="invisible"
+            android:gravity="center"
+            android:background="@drawable/level_bg"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/iv_signOrReg"
+            android:layout_below="@id/tv_username"
             android:id="@+id/tv_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/tv_login"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tv_login"
             android:text="会员等级"
             android:textColor="@android:color/white"/>
 
@@ -56,6 +63,19 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@mipmap/b18"/>
+
+        <TextView
+            android:visibility="invisible"
+            android:id="@+id/tv_username"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="40dp"
+            android:textSize="20sp"
+            android:layout_toRightOf="@+id/iv_signOrReg"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="用户名"/>
+
     </RelativeLayout>
 
     <!--<RelativeLayout
