--- a/app/src/main/res/layout/view_type_header.xml
+++ b/app/src/main/res/layout/view_type_header.xml
@@ -5,32 +5,43 @@
               android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="8dp">
 
             <ImageView
+                android:id="@+id/type_back"
+                android:layout_weight="1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="#ff0000"/>
+                android:src="@mipmap/left_arrow"/>
 
-            <RelativeLayout
-                android:layout_width="300dp"
+            <EditText
+                android:id="@+id/type_search"
+                android:layout_weight="5"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:background="#00ff00">
-            </RelativeLayout>
+                android:layout_margin="8dp"
+                android:background="@drawable/home_edti_search_bg"
+                android:drawableLeft="@mipmap/arp"
+                android:drawablePadding="6dp"
+                android:hint="美的压力锅"
+                android:paddingLeft="6dp"
+                android:textSize="16sp"/>
 
             <ImageView
+                android:id="@+id/type_selector_layout"
+                android:background="@mipmap/a9e"
+                android:layout_weight="1"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="#0000ff"/>
+                android:layout_height="30dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -53,16 +64,16 @@
 
 
             <TextView
-                style="@style/TypeTextStyle"
                 android:id="@+id/type_sort_price"
+                style="@style/TypeTextStyle"
                 android:text="价格"/>
 
 
             <TextView
-                android:textColor="@color/red"
                 android:id="@+id/type_sort_screen"
                 style="@style/TypeTextStyle"
-                android:text="筛选"/>
+                android:text="筛选"
+                android:textColor="@color/red"/>
 
         </LinearLayout>
 
